# attribute-generator

./: README.md
slides/: slides.pptm
src/: CMakeLists.txt  main.cpp  watch.py
src/examples/ex1/: example.cpp  example.h
src/examples/ex2/: example.cpp  example.h
src/examples/ex3/: checklock.py  example.cpp  example.h
src/examples/ex4/: example.cpp  watch_window.py
